force-app/main/default/objects/Calling_Campaign__c/Calling_Campaign__c.object-meta.xml
<CustomObject>
    <description>Calling campaigns like Phoenix</description>
    <label>Calling Campaign</label>
    <nameField>
        <displayFormat>Item # {00000000}</displayFormat>
        <label>Calling Campaign Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calling Campaigns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>