force-app/main/default/objects/Calling_Campaign__c/fields/Assigned_Store__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Calling Campaigns</relationshipLabel>
    <relationshipName>Calling_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>