force-app/main/default/objects/Calling_Campaign__c/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <label>Campaign Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phoenix</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>