force-app/main/default/objects/Calling_Campaign__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Calling Campaigns</relationshipLabel>
    <relationshipName>Calling_Campaigns</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>