force-app/main/default/objects/Calling_Campaign__c/fields/Client_Decision__c.field-meta.xml
<CustomField>
    <fullName>Client_Decision__c</fullName>
    <label>Client Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Credit note</fullName>
            </value>
            <value>
                <fullName>Exchange</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Exchange for manufactured product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>