force-app/main/default/objects/Calling_Campaign__c/fields/Client_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Client_Decision_Date__c</fullName>
    <label>Client Decision Date</label>
    <type>Date</type>
</CustomField>