force-app/main/default/objects/Calling_Campaign__c/fields/Client_Indic10K__c.field-meta.xml
<CustomField>
    <fullName>Client_Indic10K__c</fullName>
    <formula>TEXT(  Client__r.Ind_10K__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Indic10K</label>
    <type>Text</type>
</CustomField>