force-app/main/default/objects/Calling_Campaign__c/fields/Client_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Client_Segmentation__c</fullName>
    <formula>TEXT(Client__r.Segmentation__pc)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Segmentation</label>
    <type>Text</type>
</CustomField>