force-app/main/default/objects/Calling_Campaign__c/fields/Nb_of_Chosen_Products__c.field-meta.xml
<CustomField>
    <fullName>Nb_of_Chosen_Products__c</fullName>
    <description>Used for Validation rule: if client decision : Exchange is selected than Chosen product is mandatory</description>
    <label>TECH_Nb of Chosen Products</label>
    <summaryForeignKey>Chosen_Product__c.Calling_Campaign_Item__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>