force-app/main/default/objects/Calling_Campaign__c/fields/Order_Roll_up__c.field-meta.xml
<CustomField>
    <fullName>Order_Roll_up__c</fullName>
    <description>Roll up summary of orders created. Is used in Validation. Only one order by Calling Campaign Item</description>
    <label>Order Roll up</label>
    <summaryForeignKey>Calling_Campaign_Order__c.Calling_Campaign_Item__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>