force-app/main/default/objects/Calling_Campaign__c/fields/Preferred_CA__c.field-meta.xml
<CustomField>
    <fullName>Preferred_CA__c</fullName>
    <formula>Client__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preferred CA</label>
    <type>Text</type>
</CustomField>