force-app/main/default/objects/Calling_Campaign__c/fields/Product_Priority__c.field-meta.xml
<CustomField>
    <fullName>Product_Priority__c</fullName>
    <inlineHelpText>Product Priority</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. Capucines clients</fullName>
            </value>
            <value>
                <fullName>2. Other high risk</fullName>
            </value>
            <value>
                <fullName>3. Other at risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>