force-app/main/default/objects/Calling_Campaign__c/fields/Product_Sku__c.field-meta.xml
<CustomField>
    <fullName>Product_Sku__c</fullName>
    <label>Product Sku</label>
    <length>20</length>
    <type>Text</type>
</CustomField>