force-app/main/default/objects/Calling_Campaign__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Called - Message left</fullName>
            </value>
            <value>
                <fullName>Reached / Informed</fullName>
            </value>
            <value>
                <fullName>Not Reachable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>