force-app/main/default/objects/Calling_Campaign__c/fields/Store_Zone__c.field-meta.xml
<CustomField>
    <fullName>Store_Zone__c</fullName>
    <formula>Assigned_Store__r.MANAGEMENT_ZONE_LEVEL_TECH__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Store Zone</label>
    <type>Text</type>
</CustomField>