force-app/main/default/objects/Calling_Campaign__c/fields/Transaction_Store__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Store__c</fullName>
    <label>Transaction Store</label>
    <length>100</length>
    <type>Text</type>
</CustomField>