force-app/main/default/objects/Calling_Campaign__c/validationRules/Calling_Campaign_Client_Decision_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Calling_Campaign_Client_Decision_Date</fullName>
    <active>true</active>
    <description>Date is mandatory when a client decision is chosen</description>
    <errorConditionFormula>AND (
ISBLANK (Client_Decision_Date__c),
NOT (ISPICKVAL (  Client_Decision__c , &quot;&quot;))
)</errorConditionFormula>
    <errorMessage>Please complete the Client Decision Date</errorMessage>
</ValidationRule>