force-app/main/default/objects/Calling_Campaign__c/validationRules/Calling_Campaign_Exchange.validationRule-meta.xml
<ValidationRule>
    <fullName>Calling_Campaign_Exchange</fullName>
    <active>true</active>
    <description>If you select the client decision Exchange, you have to add an Exchanged Product to the item</description>
    <errorConditionFormula>AND (
ISPICKVAL( Client_Decision__c , &quot;Exchange&quot; ) ,
 Nb_of_Chosen_Products__c = 0)</errorConditionFormula>
    <errorMessage>You must enter at least one &quot;Chosen Product&quot; (on the right) before saving the client decision &quot;Exchange&quot;.</errorMessage>
</ValidationRule>