force-app/main/default/objects/Calling_Campaign__c/validationRules/Calling_Campaign_ManufacturedProduct.validationRule-meta.xml
<ValidationRule>
    <fullName>Calling_Campaign_ManufacturedProduct</fullName>
    <active>true</active>
    <description>You must enter at least one &quot;Calling Campaign Order&quot; (on the right) before saving the client decision &quot;Exchange for Manufactured Product&quot;.</description>
    <errorConditionFormula>AND(
NOT( $User.BypassVR__c ),
ISPICKVAL( Client_Decision__c , &quot;Exchange for manufactured product&quot;),
 Order_Roll_up__c = 0)</errorConditionFormula>
    <errorMessage>You must enter at least one &quot;Calling Campaign Order&quot; (on the right) before saving the client decision &quot;Exchange for Manufactured Product&quot;.</errorMessage>
</ValidationRule>