force-app/main/default/objects/Calling_Campaign__c/listViews/Calling_Campaign_Haute_Maroquinerie.listView-meta.xml
<ListView>
    <fullName>Calling_Campaign_Haute_Maroquinerie</fullName>
    <columns>Assigned_Store__c</columns>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Preferred_CA__c</columns>
    <columns>X10K_IMG__c</columns>
    <columns>Client_Segmentation__c</columns>
    <columns>Product_Priority__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Quantity__c</columns>
    <columns>Transaction_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Client_Decision__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Called - Message left</value>
    </filters>
    <filters>
        <field>Product_Sku__c</field>
        <operation>startsWith</operation>
        <value>P00</value>
    </filters>
    <filters>
        <field>Product_Priority__c</field>
        <operation>equals</operation>
        <value>1. Capucines clients,2. Other high risk,3. Other at risk</value>
    </filters>
    <filters>
        <field>My_Store__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Calling Campaign Haute Maroquinerie</label>
</ListView>