force-app/main/default/objects/Calling_Campaign__c/listViews/CSC_My_Store_Message_left_Last_7Days.listView-meta.xml
<ListView>
    <fullName>CSC_My_Store_Message_left_Last_7Days</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Client_Dream_ID__c</columns>
    <columns>Preferred_CA__c</columns>
    <columns>X10K_IMG__c</columns>
    <columns>Client_Segmentation__c</columns>
    <columns>Product_Priority__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Transaction_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>My_Store__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Called - Message left</value>
    </filters>
    <filters>
        <field>Product_Priority__c</field>
        <operation>equals</operation>
        <value>1. Capucines clients,2. Other high risk,3. Other at risk</value>
    </filters>
    <filters>
        <field>LAST_ACTIVITY</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>CSC My Store - Message left Last 7Days</label>
</ListView>