force-app/main/default/objects/Calling_Campaign__c/listViews/FAMILY_MAIL_ORDER.listView-meta.xml
<ListView>
    <fullName>FAMILY_MAIL_ORDER</fullName>
    <columns>Assigned_Store__c</columns>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Preferred_CA__c</columns>
    <columns>Client_Segmentation__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Quantity__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Called - Message left,Reached / Informed,Not Reachable</value>
    </filters>
    <filters>
        <field>Assigned_Store__c</field>
        <operation>equals</operation>
        <value>MAIL ORDER SINGAPORE</value>
    </filters>
    <filters>
        <field>Client_Segmentation__c</field>
        <operation>contains</operation>
        <value>Family</value>
    </filters>
    <label>FAMILY MAIL ORDER</label>
    <sharedTo>
        <role>Area_SOUTH_ASIA</role>
    </sharedTo>
</ListView>